src/main/java/com/example/vtpnano/errors/MemberNotFoundException.java
package com.example.vtpnano.errors;

public class MemberNotFoundException extends RuntimeException{


    public MemberNotFoundException(String message){
        super(message);
    }
}
